force-app/main/default/objects/Recycling_Log__c/Recycling_Log__c.object-meta.xml
<CustomObject>
    <label>Recycling Log</label>
    <pluralLabel>Recycling Logs</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <displayFormat>RL-{000000}</displayFormat>
        <label>Recycling Log</label>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>