force-app/main/default/objects/Recycling_Log__c/fields/Log_Date__c.field-meta.xml
<CustomField>
    <fullName>Log_Date__c</fullName>
    <label>Log Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>