force-app/main/default/objects/Recycling_Log__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Greywater</fullName>
                <default>true</default>
                <label>Greywater</label>
            </value>
            <value>
                <fullName>Rainwater</fullName>
            </value>
            <value>
                <fullName>RO-Reject</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>