force-app/main/default/objects/Recycling_Log__c/validationRules/NonNegative_Recycled.validationRule-meta.xml
<ValidationRule>
    <fullName>NonNegative_Recycled</fullName>
    <active>true</active>
    <description>Recycled volume cannot be negative</description>
    <errorConditionFormula>Recycled_Liters__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Recycled_Liters__c</errorDisplayField>
    <errorMessage>Recycled volume cannot be negative.</errorMessage>
</ValidationRule>